Clarified study considered data between 1962 and 2018

--- a/ny-baseball-popularity.ipynb
+++ b/ny-baseball-popularity.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# New York Baseball Team Popularity\n",
-    "Since 1962, there have been two Major League Baseball teams in New York, the Mets and the Yankees.  Each team's popularity has fluctuated over time.  We will create a visualization that attempts to answer the question 'Who has been New York's most popular baseball team since 1962?'\n",
+    "Between 1962 and 2018, there have been two Major League Baseball teams in New York, the Mets and the Yankees.  Each team's popularity has fluctuated over time.  We will create a visualization that attempts to answer the question 'Who has been New York's most popular baseball team between 1962 and 2018?'\n",
     "\n",
     "**Data Sources**\n",
     "* http://newyork.mets.mlb.com/nym/history/year_by_year_results.jsp\n",
@@ -1672,7 +1672,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "Since 1962, the New York Yankees have been the more popular baseball team in New York.  This is due, in large part, because the Yankees have won 8 World Series championships in this time while the Mets have won only 2\n",
+    "Between 1962 and 2018, the New York Yankees have generally been the more popular baseball team in New York.  This is due, in large part, because the Yankees have won 8 World Series championships in this time while the Mets have won only 2\n",
     "\n",
     "The only times the Mets have been more popular than the Yankees have been around their two World Series championships (1969 and 1986).  This shows that the most popular baseball team in New York is directly related to the probability that team will win the World Series\n",
     "\n",
