Removed unnecessary output

--- a/ny-baseball-popularity.ipynb
+++ b/ny-baseball-popularity.ipynb
@@ -1616,7 +1616,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, ax = plt.subplots(1, 1)\n",
+    "fig, ax = plt.subplots(1, 1);\n",
     "\n",
     "# hex line colors\n",
     "yankees_navy = '#132347'\n",
